--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
 			<div class="d-flex justify-content-between align-items-center flex-wrap">
 				<div>
-					<a href="#"><img src='/resources/logo.png'" height="50px"></a>
+					<a href="#"><img src='/resources/logo.png' height="50px"></a>
 				</div>
 
 				<div>
