--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -34,13 +34,16 @@
 	</style>
 
 </head>
-<body>
+<body class="m-0">
 	<div class="bg-black pb-1">
 		<div class="d-flex flex-column">
 			<div class="d-flex justify-content-end mb-2 mt-1">
 				<!-- Pulsanti in alto a destra -->
 				<div class="d-flex gap-2 me-3">
-					<a href="#" class="btn btn-light btn-sm"><i class="bi bi-envelope"></i> Area Lavoro</a>
+					<a class="btn btn-light btn-sm" aria-current="page" asp-controller="Logout" asp-action="Logout">Logout</a>
+				</div>
+				<div class="d-flex gap-2 me-3">
+					<a href="#" class="btn btn-light btn-sm">Area Lavoro</a>
 				</div>
 			</div>
 			<div class="d-flex justify-content-between align-items-center flex-wrap mx-3">
@@ -90,24 +93,14 @@
 								</ul>
 							</li>
 
-
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">FAQ</a>
-							</li>
-
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">Contatta la Struttura</a>
+								<a class="nav-link active" aria-current="page" href="#">Contatta l'Amministrazione</a>
 							</li>
 
 
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Faq" asp-action="Faq">FAQ</a>
                             </li>
-
-
-							<li class="nav-item me-3 logout">
-								<a class="nav-link active" aria-current="page" asp-controller="Logout" asp-action="Logout">Logout</a>
-							</li>
 						</ul>
 					</div>
 				</div>
