--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 	</style>
 
 </head>
-<body>
+<body class="m-0">
 	<div class="bg-black pb-1">
 		<div class="d-flex flex-column">
 			<div class="d-flex justify-content-end mb-2 mt-1">
@@ -92,7 +92,7 @@
 
 
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">FAQ</a>
+								<a class="nav-link active" aria-current="page" asp-controller="Faq" asp-action="Faq">FAQ</a>
 							</li>
 
 							<li class="nav-item">
