--- a/AreaDocente/Views/Materiali/Add.cshtml
+++ b/AreaDocente/Views/Materiali/Add.cshtml
@@ -6,13 +6,13 @@
 
 <h1>Inserimento Materiale</h1>
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
 
     <div class="mt-3">
         <label class="form-label">Titolo</label>
         <input type="text" class="form-control" asp-for="Titolo" />
         <label class="form-label" for="file">Titolo</label>
-		<input type="file" id="file" name="materiale" class="form-control" />
+		<input type="file" id="file" name="materiale" class="form-control" asp-for="materiale"/>
 
     </div>
 
