--- a/AreaPubblica/Views/Login/Login.cshtml
+++ b/AreaPubblica/Views/Login/Login.cshtml
@@ -2,8 +2,11 @@
 
 <div class="d-flex flex-column align-items-center mt-3" style="justify-content: center;">
     <div class="w-25">
+        <div style="height:5vh;">
+            &nbsp;
+        </div>
         <h1 class="text-center">Login Studente</h1>
-
+       
         <form method="post">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
@@ -19,5 +22,8 @@
                 <a class="btn btn-secondary" asp-area="" asp-controller="Login" asp-action="Register">Registrati qui</a>
             </div>
         </form>
+        <div style="height:5vh;">
+            &nbsp;
+        </div>
     </div>
 </div>
