--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     </style>
 
 </head>
-<body>
+<body class="m-0">
     <div class="bg-black pb-1">
         <div class="container d-flex flex-column">
             <div class="d-flex justify-content-end mb-2 mt-1">
