--- a/AreaPubblica/Views/Login/Register.cshtml
+++ b/AreaPubblica/Views/Login/Register.cshtml
@@ -1,5 +1,8 @@
 ﻿@model AreaPubblica.Models.RegisterViewModel
-
+<div style="height:5vh;">
+    &nbsp;
+</div>
+<div class="container">
 <h2>Registrazione Studente</h2>
 
 <form asp-action="Register" method="post" enctype="multipart/form-data">
@@ -88,5 +91,9 @@
     <hr />
 
     <button type="submit" class="btn btn-primary">Registrati</button>
+    <div style="height:5vh;">
+        &nbsp;
+    </div>
 
 </form>
+</div>
