--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -145,6 +145,9 @@
 		}
 		else
 		{
+			<div class="mb-5">
+				&nbsp;
+			</div>
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
 					<div class="card bg-secondary shadow">
@@ -156,6 +159,9 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="mb-5">
+				&nbsp;
 			</div>
 		}
 	</div>
