trying to unite all methods

--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
 								<ul class="dropdown-menu">
 
 									<li class="dropdown">
-										<a class="dropdown-item" asp-area="" asp-controller="" asp-action="">
+										<a class="dropdown-item" asp-area="" asp-controller="Studenti" asp-action="ModificaProfilo">
 											Modifica Dati
 										</a>
 									</li>
