--- a/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
+++ b/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
@@ -35,6 +35,7 @@
 
 
 		<form class="row" method="post" id="modifica-form" enctype="multipart/form-data">
+			<input type="hidden" asp-for="K_Studente" />
 			<div class="col-12 col-xl-8 bg-white border border-1 border-black shadow rounded-5 p-4">
 				<h3 class="text-center">Modifica Profilo</h3>
 
