--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -45,17 +45,16 @@
 																		<p class="fw-bold mb-0">
 																			@if (comunicazione.Studente != null && comunicazione.Studente.K_Studente == comunicazione.K_Soggetto)
 																			{
-																				<span class="text-primary">@($"{comunicazione.Studente.Nome} {comunicazione.Studente.Cognome} (Studente)")</span>
+																				<span class="text-primary">@($"{comunicazione.Studente.Nome} {comunicazione.Studente.Cognome} - {comunicazione.Soggetto}")</span>
 																			}
 																			else if (comunicazione.Docente != null && comunicazione.Docente.K_Docente == comunicazione.K_Soggetto)
 																			{
-																				<span class="text-danger">@($"{comunicazione.Docente.Nome} {comunicazione.Docente.Cognome} (Docente)")</span>
+																				<span class="text-danger">@($"{comunicazione.Docente.Nome} {comunicazione.Docente.Cognome} - {comunicazione.Soggetto}")</span>
 																			}
-																			else
+																			else if (comunicazione.Studente == null && comunicazione.Docente == null)
 																			{
 																				<span class="text-success">Amministrazione</span>
 																			}
-																			- @comunicazione.Soggetto
 																		</p>
 																		<span class="px-2"></span>
 																		<p class="text-muted small mb-0"><i class="far fa-clock"></i>@comunicazione.DataOraComunicazione</p>
@@ -72,7 +71,6 @@
 													<li class="bg-white">
 														<form method="post" asp-action="AddRisposta">
 															<input type="hidden" name="Codice_Comunicazione" value="@gruppo.Key" />
-															<input type="hidden" name="K_Esame" value="@gruppo.First().K_Esame" />
 															<div data-mdb-input-init class="form-outline">
 																<textarea class="form-control bg-body-tertiary" id="textAreaExample2" rows="4" name="Testo"></textarea>
 																<label class="form-label" for="textAreaExample2">Message</label>
