--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - AreaStudente</title>
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/AreaStudente.styles.css" asp-append-version="true" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
 	<style>
 		.navbar-custom {
@@ -22,23 +22,31 @@
 		.dropdown-menu > li:hover > .dropdown-submenu {
 			display: block;
 		}
+
+		.sticky-top {
+			z-index: 1030 !important; /* Bootstrap usa 1000 per i dropdown, 1050+ per i modal. 1030 è un valore comune per le navbar fixed/sticky */
+		}
+
+
+		.navbar-nav .nav-item.logout {
+			position: absolute;
+			right: 0; /* Posiziona il link a destra */
+		}
 	</style>
 
 </head>
 <body>
 	<div class="bg-black pb-1">
-		<div class="container d-flex flex-column">
+		<div class="d-flex flex-column">
 			<div class="d-flex justify-content-end mb-2 mt-1">
 				<!-- Pulsanti in alto a destra -->
-				<div class="d-flex gap-2">
-					<a href="#" class="btn btn-light btn-sm"><i class="bi bi-envelope"></i> Webmail</a>
-					<a href="#" class="btn btn-light btn-sm"><i class="bi bi-person-circle"></i> Area riservata</a>
+				<div class="d-flex gap-2 me-3">
+					<a href="#" class="btn btn-light btn-sm"><i class="bi bi-envelope"></i> Area Lavoro</a>
 				</div>
 			</div>
-
-			<div class="d-flex justify-content-between align-items-center flex-wrap">
+			<div class="d-flex justify-content-between align-items-center flex-wrap mx-3">
 				<div>
-					<a href="#"><img src='/resources/logo.png' height="50px"></a>
+					<a asp-area="" asp-controller="Studenti" asp-action="Show"><img src="/resources/logo.png" height="50px"></a>
 				</div>
 
 				<div>
@@ -50,60 +58,56 @@
 	<header>
 		<div class="sticky-top">
 			<nav class="navbar navbar-expand-lg navbar-custom">
-				<div class="container">
+				<div class="mx-3">
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" asp-controller="Studenti" asp-action="ModificaProfilo">Modifica Profilo</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" asp-controller="Studenti" asp-action="Recupera">Recupera Password</a>
+								<a class="nav-link active" aria-current="page" asp-area="" asp-controller="Studenti" asp-action="Show">Il mio Profilo</a>
 							</li>
 
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									Offerta Formativa
+									Gestione Profilo
 								</a>
 								<ul class="dropdown-menu">
 
 									<li class="dropdown">
-										<a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-											Piano di studi
+										<a class="dropdown-item" asp-area="" asp-controller="Studenti" asp-action="ModificaProfilo">
+											Modifica Dati
 										</a>
-										<ul class="dropdown-menu dropdown-submenu">
-											<li><a class="dropdown-item" href="#">Programma</a></li>
-											<li><a class="dropdown-item" href="#">Esami e docenti</a></li>
-										</ul>
 									</li>
 								</ul>
 							</li>
 
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									Offerta Formativa
+									Immatricolazione
 								</a>
 								<ul class="dropdown-menu">
-									<li><a class="dropdown-item" href="#">Calendario Accademico</a></li>
-									<li><a class="dropdown-item" href="#">Sedute di laurea</a></li>
+									<li><a class="dropdown-item" asp-area="" asp-controller="" asp-action="">Invia Documenti</a></li>
 								</ul>
-
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">Contatti</a>
 							</li>
 
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">Come Funziona</a>
-							</li>
 
 							<li class="nav-item">
 								<a class="nav-link active" aria-current="page" href="#">FAQ</a>
 							</li>
 
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">Privacy</a>
+								<a class="nav-link active" aria-current="page" href="#">Contatta la Struttura</a>
+							</li>
+
+
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" asp-area="" asp-controller="Faq" asp-action="Faq">FAQ</a>
+							</li>
+
+
+							<li class="nav-item me-3 logout">
+								<a class="nav-link active" aria-current="page" asp-controller="Logout" asp-action="Logout">Logout</a>
 							</li>
 						</ul>
 					</div>
@@ -113,16 +117,17 @@
 	</header>
 
 	@* <div class="container"> *@
-		<main role="main" class="pb-3">
-			@RenderBody()
-		</main>
+	<main role="main" class="pb-3">
+		@RenderBody()
+	</main>
 	@* </div> *@
 
+
 	<footer>
-		<div class="bg-dark text-white h-100">
+		<div class="bg-dark text-white  h-100 mt-5">
 			<div class="container d-flex justify-content-between align-items-end flex-wrap">
 				<div>
-					<img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3">
+					<img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
 					<p class="fs-4 ms-4 mb-0">Università UNIGen</p>
 					<p class="fs-6">Milano, Milano, MI 20100, IT</p>
 				</div>
@@ -130,7 +135,7 @@
 					<p class="fs-6">© 2024 Generation: You Employed, Inc.</p>
 				</div>
 				<div>
-					<p class="fs-5 mb-1">Chi Siamo</p>
+					<p class="fs-5">Chi Siamo</p>
 					<ul class="list-unstyled ms-3">
 						<li><a href="#" class="text-white">Contatti</a></li>
 						<li><a href="#" class="text-white">Come Funziona</a></li>
@@ -146,5 +151,6 @@
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	@await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
