--- a/AreaStudente/wwwroot/css/site.css
+++ b/AreaStudente/wwwroot/css/site.css
@@ -21,14 +21,14 @@ body {
     margin-bottom: 60px;
 }
 
-#img-container {
+/*#img-container {
     border-radius: 50%;
     width: 100px;
     height: 100px;
     background: lime;
-    overflow: hidden; /* importante per ritagliare l'immagine */
-    position: relative; /* già hai position-absolute nel div */
-}
+    overflow: hidden;*/ /* importante per ritagliare l'immagine */
+    /*position: relative;*/ /* già hai position-absolute nel div */
+/*}*/
 
     #img-container img {
         width: 100%;
@@ -37,6 +37,21 @@ body {
         border-radius: 50%; /* arrotonda l'immagine */
         display: block; /* rimuove eventuali spazi bianchi sotto l'immagine */
     }
+
+.img-icon 
+  
+
+{
+    font-size: 4rem; /* grandezza dell'icona */
+    color: #6c757d;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: #f0f0f0; /* Se vuoi avere anche il cerchio come sfondo */
+}
 
 .heading-small {
     font-size: .90rem;
