--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -78,6 +78,9 @@
 										<a class="dropdown-item" asp-area="" asp-controller="Studenti" asp-action="ModificaProfilo">
 											Modifica Dati
 										</a>
+										<a class="dropdown-item" asp-area="" asp-controller="Studenti" asp-action="Recupera">
+											Recupera Password
+										</a>
 									</li>
 								</ul>
 							</li>
