--- a/AreaStudente/Views/Studenti/Recupera.cshtml
+++ b/AreaStudente/Views/Studenti/Recupera.cshtml
@@ -13,10 +13,10 @@
 }
 
 <form method="post" id="modifica-form">
-	<div class="d-flex flex-column align-items-center">
-		<h3 class="text-center mt-4 mb-3">Benvenuto in Modifica Profilo</h3>
+	<div class="d-flex flex-column align-items-center mt-3">
 		<div class="card shadow rounded-5" style="width: 18rem;">
 			<div class="card-body text-center p-0">
+		<h3 class ="text-center mt-2">Recupera Password</h3>
 				<i class="bi bi-person-circle mb-2 mt-2 p-3" style=" font-size: 5rem; color: #12304F"></i>
 				<h5 class="card-title text-center p-2" style="color: #12304F">Problemi di accesso?</h5>
 				<p class="card-text text-muted text-center p-1">Inserisci il tuo indirizzo e-mail: ti invieremo un link per accedere nuovamente al tuo account.</p>
