--- a/Comunicazioni/Views/Login/Login.cshtml
+++ b/Comunicazioni/Views/Login/Login.cshtml
@@ -1,33 +1,30 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-<h1>Login</h1>
-<form method="post">
-	<div class="mt-3">
-		<label class="form-label">Username</label>
-		<input type="text" class="form-control" name="usr" maxlength="50" required />
-	</div>
-	<div class="mt-3">
-		<label class="form-label">Password</label>
-		<input type="password" class="form-control" name="pwd" maxlength="50" required />
-	</div>
-	<div class="mt-3">
-		<button type="submit" class="btn btn-primary">Login</button>
-	</div>
-	<div class="mt-3">
-		<label class="form-label">Ruolo</label>
-		<select class="form-select" id="lista" name="ruolo">
-			<option disabled selected>-- Seleziona un ruolo --</option>
-			<option value="1">Amministrazione</option>
-			<option value="2">Docente</option>
-			<option value="3">Studente</option>
-		</select>
-	</div>
-</form>
-@if (!ViewData.ModelState.IsValid)
-{
-	<script>
-		alert("Username o password errati.");
-	</script>
-}
+﻿@model Comunicazioni.Models.LoginViewModel
+
+<div class="d-flex flex-column align-items-center mt-3" style="justify-content: center;">
+    <div class="w-25">
+        <div style="height:5vh;">
+            &nbsp;
+        </div>
+        <h1 class="text-center">Login</h1>
+
+        <form method="post">
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" asp-for="username" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" asp-for="PWD" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Login</button>
+            <p class="mt-3 text-center">Se non sei ancora registrato</p>
+            <div class="d-flex justify-content-center">
+                <a class="btn btn-secondary" asp-area="" asp-controller="Login" asp-action="Register">Registrati qui</a>
+            </div>
+        </form>
+        <div style="height:5vh;">
+            &nbsp;
+        </div>
+    </div>
+</div>
 
