--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -94,17 +94,10 @@
 							</li>
 
 							<li class="nav-item">
-<<<<<<< HEAD
-								<a class="nav-link active" aria-current="page" asp-controller="Faq" asp-action="Faq">FAQ</a>
-							</li>
 
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">Contatta la Struttura</a>
-=======
 								<a class="nav-link active" aria-current="page" href="#">Contatta l'Amministrazione</a>
->>>>>>> e012ca3a8b464242251617cb50ac3830b05f36e5
-							</li>
 
+							</li>
 
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Faq" asp-action="Faq">FAQ</a>
@@ -128,7 +121,7 @@
             <div class="container d-flex justify-content-between align-items-end flex-wrap">
                 <div>
                     <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
-                    <p class="fs-4 ms-4 mb-0">Università UNIGen</p>
+                    <p class="fs-4  mb-0">Università UNIGen</p>
                     <p class="fs-6">Milano, Milano, MI 20100, IT</p>
                 </div>
                 <div>
