--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 	</style>
 
 </head>
-<body class="m-0">
+<body class="m-0 flex-wrapper">
 	<div class="bg-black pb-1">
 		<div class="d-flex flex-column">
 			<div class="d-flex justify-content-end mb-2 mt-1">
@@ -48,7 +48,7 @@
 			</div>
 			<div class="d-flex justify-content-between align-items-center flex-wrap mx-3">
 				<div>
-					<a asp-area="" asp-controller="Studenti" asp-action="Show"><img src="/resources/logo.png" height="50px"></a>
+					<a asp-area="" asp-controller="Studenti" asp-action="Show"><img src="/resources/logo.png" height="50px;"></a>
 				</div>
 
 				<div>
