--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="container-fluid my-5">
-    <div class="mb-5">
-        <h1 class="text-center">Pannello del docente</h1>
+    <div class="mb-3">
+        <h2 class="text-center">Pannello del docente</h2>
     </div>
 
     <div class="row g-4 justify-content-around">
@@ -64,5 +64,9 @@
             </div>
         </div>
 
+    </div>
+
+    <div>
+        <h2>*INSERIRE COMUNICAZIONI*</h2>
     </div>
 </div>
