--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
         </div>
     </header>
 
-    <div class="container-fluid">
+    <div class="container">
         <main role="main" class="pb-3 mt-5">
             @RenderBody()
         </main>
